--- a/css/styles.css
+++ b/css/styles.css
@@ -233,15 +233,15 @@ p {
   text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
-  transition:  background-color var(--transition-option);
+  transition: background-color var(--transition-option);
 }
 .hero .button:hover,
 .hero .button:focus,
 .mailing-button:hover,
 .mailing-button:focus,
 .form-button:hover,
-.form-button:focus{
-  background-color: #188CE8;
+.form-button:focus {
+  background-color: #188ce8;
 }
 
 /* ---------------------------------------Modal */
@@ -256,11 +256,11 @@ p {
   opacity: 1;
   transition: opacity var(--backdrop-opacity);
 }
-.backdrop.is-hidden{
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal{
+.backdrop.is-hidden .modal {
   transform: scale(0.7) translate(-50%, -50%);
 }
 .form {
@@ -271,6 +271,9 @@ p {
   padding: 40px;
   left: 50%;
   top: 50%;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
   transform: scale(1) translate(-50%, -50%);
   transition: transform var(--backdrop-opacity);
 }
@@ -305,36 +308,43 @@ p {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
+}
+.form-area {
+  margin-bottom: 20px;
 }
 .form-input {
   height: 40px;
-  margin-bottom: 10px;
   padding: 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  transition:border-color var(--transition-option),
-  fill var(--transition-option);
+  transition: border-color var(--transition-option),
+    fill var(--transition-option);
 }
-.form-input:focus-within {
+.form-input:focus-within,
+.form-input:hover {
   outline: 0;
   border-color: var(--accent-color);
 }
-.form-input:focus-within + .form-icon {
+.form-input:focus-within + .form-icon,
+.form-input:hover + .form-icon {
   fill: var(--accent-color);
 }
 .form-icon {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 15px;
+  transition: fill var(--transition-option);
 }
 .form-label {
   margin-bottom: 4px;
   text-align: start;
+  font-size: 12px;
+  line-height: 1.17;
 }
 .form-input.area {
   height: 120px;
   padding: 12px 16px;
-  margin-bottom: 20px;
   resize: none;
 }
 .checkbox {
@@ -365,13 +375,12 @@ p {
   margin-right: 8.23px;
   border: 2px solid #2a2a2a;
   border-radius: 2px;
-  transition: 
-  border-color var(--transition-option),
-  background-color var(--transition-option),
-  background-image var(--transition-option),
-  background-size var(--transition-option),
-  background-origin var(--transition-option),
-  background-repeat var(--transition-option);
+  transition: border-color var(--transition-option),
+    background-color var(--transition-option),
+    background-image var(--transition-option),
+    background-size var(--transition-option),
+    background-origin var(--transition-option),
+    background-repeat var(--transition-option);
 }
 .checkbox:checked + .check-icon {
   border-color: var(--accent-color);
@@ -381,7 +390,9 @@ p {
   background-origin: border-box;
   background-repeat: no-repeat;
 }
-
+.form-button {
+  padding: 10px 55px;
+}
 
 /*------------------------------------------------- Features */
 .features {
@@ -763,7 +774,7 @@ p {
 .emeil-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
-.emeil-input:focus-within{
+.emeil-input:focus-within {
   outline: 0;
   border-color: var(--accent-color);
 }
